--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,18 @@
     "manifest_version": 3,
     "name": "New Tab Extensions",
     "version": "6.0",
-    "description": "Custom New Tab with custom Icons. Wallpaper resizes with display size. Comes with a calendar, which shows the current date and the holidays, a weather and a speedtest widget.",
+    "description": "Ein benutzerdefinierter New Tab mit Kalender (inkl. Feiertage), Wettervorhersage und Speedtest-Widget. Das Hintergrundbild passt sich der Bildschirmgröße an.",
     "author": "Daniel Sichler",
     "icons": {
-        "128": "icons/icon128.png",
-        "48": "icons/icon48.png",
-        "16": "icons/icon16.png"
+      "128": "icons/icon128.png",
+      "48": "icons/icon48.png",
+      "16": "icons/icon16.png"
     },
     "chrome_url_overrides": {
-        "newtab": "tab.html"
-    }
-}
+      "newtab": "tab.html"
+    },
+    "permissions": [
+      "activeTab",
+      "storage"
+    ]
+  }
