--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "New Tab Extensions",
     "version": "6.0",
-    "description": "Ein benutzerdefinierter New Tab mit Kalender (inkl. Feiertage), Wettervorhersage und Speedtest-Widget. Das Hintergrundbild passt sich der Bildschirmgröße an.",
+    "description": "Ein benutzerdefinierter New Tab mit Kalender (inkl. Feiertage), Wettervorhersage und Speedtest-Widget. Das Hintergrundbild passt sich der Bildschirmgröße an. Ebenfalls kann das Hintergrundbild geändert werden (verwendet die Chrome storage API).",
     "author": "Daniel Sichler",
     "icons": {
       "128": "icons/icon128.png",
