--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
     "manifest_version": 3,
-    "name": "New Tab Extensions",
+    "name": "__MSG_extensionName__",
     "version": "6.0",
-    "description": "Ein benutzerdefinierter New Tab mit Kalender (inkl. Feiertage), Wettervorhersage und Speedtest-Widget. Das Hintergrundbild passt sich der Bildschirmgröße an. Ebenfalls kann das Hintergrundbild geändert werden (verwendet die Chrome storage API).",
+    "description": "__MSG_extensionDescription__",
     "author": "Daniel Sichler",
+    "default_locale": "en",
     "icons": {
       "128": "icons/One_Piece/icon128.png",
       "48": "icons/One_Piece/icon48.png",
@@ -12,8 +13,11 @@
     "chrome_url_overrides": {
       "newtab": "tab.html"
     },
-    "permissions": [
-      "activeTab",
-      "storage"
-    ]
-  }
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
+  "host_permissions": [
+    "https://get.api-feiertage.de/*"
+  ]
+}
