Add slideshow backgrounds, glass settings UI upgrades, custom color picker, animations, and performance tweaks

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
     },
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "unlimitedStorage"
   ],
   "host_permissions": [
     "https://get.api-feiertage.de/*"
