--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "__MSG_extensionName__",
-    "version": "6.0",
+    "version": "2.0.1",
     "description": "__MSG_extensionDescription__",
     "author": "Daniel Sichler",
     "default_locale": "en",
@@ -13,12 +13,14 @@
     "chrome_url_overrides": {
       "newtab": "tab.html"
     },
-  "permissions": [
-    "activeTab",
-    "storage",
-    "unlimitedStorage"
-  ],
-  "host_permissions": [
-    "https://get.api-feiertage.de/*"
-  ]
+    "permissions": [
+      "storage",
+      "unlimitedStorage"
+    ],
+    "host_permissions": [
+      "https://get.api-feiertage.de/*"
+    ],
+    "content_security_policy": {
+      "extension_pages": "script-src 'self'; object-src 'self'; frame-src https://api.wetteronline.de https://www.metercustom.net"
+    }
 }
